--- a/力扣.md
+++ b/力扣.md
@@ -1478,6 +1478,37 @@ class Solution {
 
 
 
+# 557
+
+```javascript
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var reverseWords = function(s) {
+    const ret = [];
+    let i = 0;
+    len = s.length;
+    while(i<len){
+        let start = i;
+        while(s.charAt(i)!= ' '&&i<len){
+            i++;
+        }
+        for(let p = start;p<i;p++){
+            ret.push(s.charAt(i-1+start-p));
+        }
+        while(i<len&&s.charAt(i) == ' '){
+            i++;
+            ret.push(' ');
+        }
+        console.log(ret)
+    }
+    return ret.join('');
+};
+```
+
+
+
 # 567
 
 ```java
