--- a/力扣.md
+++ b/力扣.md
@@ -1423,6 +1423,32 @@ class Solution {
 }
 ```
 
+# 442
+
+```javascript
+/**
+ * @param {number[]} nums
+ * @return {number[]}
+ */
+var findDuplicates = function(nums) {
+    const n = nums.length;
+    const ans = [];
+    for(let i = 0;i<n;i++){
+      const x = Math.abs(nums[i]);
+        if (nums[x - 1] > 0) {
+            nums[x - 1] = -nums[x - 1];
+            console.log( nums[x - 1])
+        } else {
+            ans.push(x);
+        }
+    }
+       console.log(ans)
+       return ans;
+};
+```
+
+
+
 # 513
 
 ```java
