--- a/力扣.md
+++ b/力扣.md
@@ -194,6 +194,31 @@ class Solution {
 }
 ```
 
+# 42
+
+```java
+class Solution {
+    public int trap(int[] height) {
+        int n = height.length;
+        int[] lmax = new int[n];
+        int[] rmax  = new int[n];
+        lmax[0] = height[0];
+        rmax[n-1] = height[n-1];
+        int ans = 0;
+        for(int i=1;i<n;i++){
+            lmax[i] = Math.max(height[i],lmax[i-1]);
+        }
+        for(int i = n-2;i>=0;i--){
+            rmax[i] = Math.max(height[i],rmax[i+1]);
+        }  
+        for(int i = 1;i<n-1;i++){
+            ans += Math.min(lmax[i]-height[i],rmax[i]-height[i]);
+        } 
+        return ans;
+    }
+}
+```
+
 # 53
 
 ```java
