--- a/力扣.md
+++ b/力扣.md
@@ -148,6 +148,45 @@ class Solution {
 }
 ```
 
+# 19
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ * int val;
+ * ListNode next;
+ * ListNode() {}
+ * ListNode(int val) { this.val = val; }
+ * ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode removeNthFromEnd(ListNode head, int n) {
+        ListNode dummy = new ListNode(-1);
+        dummy.next = head;
+        ListNode last = findNode(dummy, n + 1);
+        last.next = last.next.next;
+        return dummy.next;
+    }
+
+    public ListNode findNode(ListNode head, int n) {
+        ListNode p1 = head;
+        for (int i = 0; i < n; i++) {
+            p1 = p1.next;
+        }
+        ListNode p2 = head;
+        while (p1 != null) {
+            p1 = p1.next;
+            p2 = p2.next;
+        }
+        return p2;
+    }
+}
+```
+
+
+
 # 21
 
 ```java
@@ -164,6 +203,37 @@ class Solution {
             list2.next =  mergeTwoLists(list1,list2.next);
             return list2;
         }
+    }
+}
+```
+
+# 24
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode swapPairs(ListNode head) {
+        ListNode dummy = new ListNode(0);
+        dummy.next = head;
+        ListNode temp = dummy;
+        while(temp.next!=null && temp.next.next !=null){
+            ListNode node1= temp.next;
+            ListNode node2= temp.next.next;
+            node1.next = node2.next;
+            node2.next = node1;
+            temp.next = node2;
+            temp = node1;
+        }
+        return dummy.next;
     }
 }
 ```
@@ -193,6 +263,115 @@ class Solution {
     }
 }
 ```
+
+# 27
+
+```java
+class Solution {
+    public int removeElement(int[] nums, int val) {
+        int fast = 0;
+        int slow = 0;
+        while(fast<nums.length){
+            if(nums[fast] != val){
+                nums[slow] = nums[fast];
+                slow++;
+            }
+            fast++;
+        }
+        return slow;
+    }
+}
+```
+
+
+
+# 34
+
+```java
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        if (nums.length == 0) {
+            return new int[] { -1, -1 };
+        }
+        int left = getFirst(nums, target);
+        int right = getSec(nums, target);
+
+        return new int[] { left, right };
+    }
+
+    public int getFirst(int[] nums, int target) {
+        int left = 0;
+        int right = nums.length - 1;
+        while (left + 1 < right) {
+            int mid = (right + left) / 2;
+            if (nums[mid] > target) {
+                right = mid;
+            } else if (nums[mid] < target) {
+                left = mid;
+            } else {
+                right = mid;
+            }
+        }
+
+        if (nums[left] == target) {
+            return left;
+        } else if (nums[right] == target) {
+            return right;
+        } else {
+            return -1;
+        }
+    }
+
+    public int getSec(int[] nums, int target) {
+        int left = 0;
+        int right = nums.length - 1;
+        while (left + 1 < right) {
+            int mid = (right + left) / 2;
+            if (nums[mid] > target) {
+                right = mid;
+            } else if (nums[mid] < target) {
+                left = mid;
+            } else {
+                left = mid;
+            }
+        }
+
+        if (nums[right] == target) {
+            return right;
+        } else if (nums[left] == target) {
+            return left;
+        } else {
+            return -1;
+        }
+    }
+}
+```
+
+
+
+# 35
+
+```java
+class Solution {
+    public int searchInsert(int[] nums, int target) {
+        int left = 0;
+        int right = nums.length-1;
+        while(left<=right){
+            int mid = (right + left)/2;
+            if(nums[mid] == target){
+                return mid;
+            }else if(nums[mid] < target){
+                left = mid +1;
+            }else {
+                right = mid -1;
+            }
+        }
+        return left;
+    }
+}
+```
+
+
 
 # 42
 
@@ -235,7 +414,55 @@ class Solution {
 }
 ```
 
+# 54
 
+```java
+class Solution {
+    public List<Integer> spiralOrder(int[][] matrix) {
+        int m = matrix.length;
+        int n = matrix[0].length;
+
+        int upper = 0;
+        int left = 0;
+        int lower = m - 1;
+        int right = n - 1;
+        List<Integer> ans = new LinkedList<>();
+        while (ans.size() < m * n) {
+            if (upper <= lower) {
+                for (int j = left; j <= right; j++) {
+                    ans.add(matrix[upper][j]);
+                }
+                upper++;
+            }
+
+            if (left <= right) {
+                for (int i = upper; i <= lower; i++) {
+                    ans.add(matrix[i][right]);
+                }
+                right--;
+            }
+
+            if (upper <= lower) {
+                for (int j = right; j >= left; j--) {
+                    ans.add(matrix[lower][j]);
+                }
+                lower--;
+            }
+
+            if (left <= right) {
+                for (int i = lower; i >= upper; i--) {
+                    ans.add(matrix[i][left]);
+                }
+                left++;
+            }
+
+        }
+        return ans;
+    }
+}
+```
+
+​	
 
 # 56
 
@@ -271,6 +498,32 @@ class Solution {
 
 
 
+# 69
+
+```java
+class Solution {
+    public int mySqrt(int x) {
+        int left = 0;
+        int right = x;
+        int ans = -1;
+        while (left <= right) {
+            int mid = (right + left) / 2;
+            if ((long) mid * mid == x) {
+                return mid;
+            } else if ((long)mid * mid > x) {
+                right = mid - 1;
+            } else {
+                ans = mid;
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+}
+```
+
+
+
 # 75
 
 ```java
@@ -298,6 +551,57 @@ class Solution {
                 ++p1;
             }
         }
+    }
+}
+```
+
+
+
+# 76
+
+```java
+class Solution {
+    public String minWindow(String s, String t) {
+        Map<Character, Integer> need = new HashMap<>();
+        Map<Character, Integer> window = new HashMap<>();
+        for (char c : t.toCharArray()) {
+            need.put(c, need.getOrDefault(c, 0) + 1);
+        }
+
+        int left = 0;
+        int right = 0;
+        int valid = 0;
+        int start = 0;
+        int ans = Integer.MAX_VALUE;
+
+        while (right < s.length()) {
+            char c = s.charAt(right);
+            right++;
+            if (need.containsKey(c)) {
+                window.put(c, window.getOrDefault(c, 0) + 1);
+                if (need.get(c).equals(window.get(c))) {
+                    valid++;
+                }
+            }
+
+            while (valid == need.size()) {
+                if (right - left < ans) {
+                    start = left;
+                    ans = right - left;
+                }
+
+                char l = s.charAt(left);
+                left++;
+                if (need.containsKey(l)) {
+                    if (need.get(l).equals(window.get(l))) {
+                        valid--;
+                    }
+                    window.put(l, window.get(l) - 1);
+                }
+            }
+        }
+
+        return ans == Integer.MAX_VALUE ? "" : s.substring(start, start + ans);
     }
 }
 ```
@@ -824,6 +1128,64 @@ class Solution {
 
 
 
+# 146
+
+```java
+class Solution {
+    public int[] spiralArray(int[][] array) {
+        if (array == null || array.length == 0)
+            return new int[0];
+        int m = array.length;
+        int n = array[0].length;
+
+        int left = 0;
+        int upper = 0;
+        int right = n - 1;
+        int lower = m - 1;
+        int[] ans = new int[m * n];
+        int start = 0;
+
+        while (start < m * n) {
+            if (upper <= lower) {
+                for (int j = left; j <= right; j++) {
+                    ans[start] = array[upper][j];
+                    start++;
+                }
+                upper++;
+            }
+
+            if (left <= right) {
+                for (int i = upper; i <= lower; i++) {
+                    ans[start] = array[i][right];
+                    start++;
+                }
+                right--;
+            }
+
+            if (upper <= lower) {
+                for (int j = right; j >= left; j--) {
+                    ans[start] = array[lower][j];
+                    start++;
+                }
+                lower--;
+            }
+
+            if (left <= right) {
+                for (int i = lower; i >= upper; i--) {
+                    ans[start] = array[i][left];
+                    start++;
+                }
+                left++;
+            }
+        }
+
+        return ans;
+    }
+}
+```
+
+
+
 # 151
 
 ```javascript
@@ -852,6 +1214,31 @@ var reverseWords = function(s) {
     }
     return result;
 };
+```
+
+
+
+```java
+class Solution {
+    public String reverseWords(String s) {
+        s = s.trim();
+        int j = s.length() - 1;
+        int i = j;
+        StringBuilder res = new StringBuilder();
+
+        while (i >= 0) {
+            while (i >= 0 && s.charAt(i) != ' ') {
+                i--;
+            }
+            res.append(s.substring(i + 1, j + 1) + ' ');
+            while (i >= 0 && s.charAt(i) == ' ') {
+                i--;
+            }
+            j = i;
+        }
+        return res.toString().trim();
+    }
+}
 ```
 
 
@@ -1068,6 +1455,32 @@ class Solution {
 }
 ```
 
+# 206
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        if(head == null || head.next == null){
+            return head;
+        }
+        ListNode last = reverseList(head.next);
+        head.next.next= head;
+        head.next =null;
+        return last;
+    }
+}
+```
+
 
 
 # 209
@@ -1208,6 +1621,27 @@ class Solution {
 }
 ```
 
+# 242
+
+```java
+class Solution {
+    public boolean isAnagram(String s, String t) {
+        if (s.length() != t.length())
+            return false;
+        int[] list = new int[26];
+        for (int i = 0; i < s.length(); i++) {
+            list[s.charAt(i) - 'a']++;
+            list[t.charAt(i) - 'a']--;
+        }
+        for (int i = 0; i < 26; i++) {
+            if (list[i] != 0)
+                return false;
+        }
+        return true;
+    }
+}
+```
+
 
 
 # 283
@@ -1292,6 +1726,26 @@ class Solution {
         }
         odd.next = evenHead;
         return head;
+    }
+}
+```
+
+
+
+# 344
+
+```java
+class Solution {
+    public void reverseString(char[] s) {
+        int first = 0;
+        int last = s.length - 1;
+        while (first < last) {
+            char temp = s[first];
+            s[first] = s[last];
+            s[last] = temp;
+            first++;
+            last--;
+        }
     }
 }
 ```
@@ -1447,6 +1901,60 @@ class Solution {
     }
 }
 ```
+
+# 367
+
+```java
+class Solution {
+    public boolean isPerfectSquare(int num) {
+        int left = 0;
+        int right = num;
+        while (left <= right) {
+            int mid = (left + right) / 2;
+            if ((long) mid * mid == num) {
+                return true;
+            } else if ((long) mid * mid > num) {
+                right = mid - 1;
+            } else {
+                left = left + 1;
+
+            }
+        }
+        return false;
+    }
+}
+```
+
+
+
+# 383
+
+```java
+class Solution {
+    public boolean canConstruct(String ransomNote, String magazine) {
+        if (ransomNote.length() > magazine.length())
+            return false;
+        int[] record = new int[26];
+
+        for (int i = 0; i < magazine.length(); i++) {
+            record[magazine.charAt(i) - 'a']++;
+        }
+
+        for (int i = 0; i < ransomNote.length(); i++) {
+            record[ransomNote.charAt(i) - 'a']--;
+        }
+
+        for (int i = 0; i < 26; i++) {
+            if (record[i] < 0)
+                return false;
+        }
+        return true;
+
+    }
+}
+```
+
+
 
 # 442
 
@@ -1846,6 +2354,59 @@ class Solution {
 
 
 
+# 844
+
+```java
+class Solution {
+    public boolean backspaceCompare(String s, String t) {
+        int i = s.length() - 1;
+        int j = t.length() - 1;
+
+        int skipI = 0;
+        int skipJ = 0;
+        while (i >= 0 || j >= 0) {
+            while (i >= 0) {
+                if (s.charAt(i) == '#') {
+                    i--;
+                    skipI++;
+                } else if (skipI > 0) {
+                    skipI--;
+                    i--;
+                } else {
+                    break;
+                }
+            }
+            while (j >= 0) {
+                if (t.charAt(j) == '#') {
+                    j--;
+                    skipJ++;
+                } else if (skipJ > 0) {
+                    skipJ--;
+                    j--;
+                } else {
+                    break;
+                }
+            }
+            if (i >= 0 && j >= 0) {
+                if (s.charAt(i) != t.charAt(j)) {
+                    return false;
+                }
+            } else {
+                if (i >= 0 || j >= 0) {
+                    return false;
+                }
+
+            }
+            i--;
+            j--;
+        }
+        return true;
+    }
+}
+```
+
+
+
 # 845	
 
 ```java
@@ -1888,6 +2449,35 @@ class Solution {
             fast = fast.next.next;
         }
         return slow;
+    }
+}
+```
+
+
+
+# 904
+
+```java
+class Solution {
+    public int totalFruit(int[] fruits) {
+        int left = 0;
+        int right = 0;
+        int ans = 0;
+        int n = fruits.length;
+        Map<Integer, Integer> map = new HashMap<>();
+
+        while (right < n) {
+            map.put(fruits[right], map.getOrDefault(fruits[right], 0) + 1);
+            while (map.size() > 2) {
+                map.put(fruits[left], map.get(fruits[left]) - 1);
+                if (map.get(fruits[left]) == 0)
+                    map.remove(fruits[left]);
+                left++;
+            }
+            right++;
+            ans = Math.max(ans, right - left);
+        }
+        return ans;
     }
 }
 ```
@@ -1940,6 +2530,33 @@ class Solution {
 https://labuladong.gitee.io/algo/4/32/133/
 ```
 
+# 977
+
+```java
+class Solution {
+    public int[] sortedSquares(int[] nums) {
+        int n = nums.length;
+        int[] ans = new int[n];
+        int i = 0;
+        int j = n - 1;
+        int index = n - 1;
+        while (i <= j) {
+            if (Math.abs(nums[i]) > Math.abs(nums[j])) {
+                ans[index] = nums[i] * nums[i];
+                i++;
+            } else {
+                ans[index] = nums[j] * nums[j];
+                j--;
+            }
+            index--;
+        }
+        return ans;
+    }
+}
+```
+
+
+
 # 986
 
 ```java
@@ -1968,4 +2585,6 @@ class Solution {
     }
 }
 ```
+
+##### 
 
