--- a/力扣.md
+++ b/力扣.md
@@ -185,6 +185,32 @@ class Solution {
 }
 ```
 
+# 20
+
+```java
+class Solution {
+    public boolean isValid(String s) {
+        Deque<Character> queue = new LinkedList<>();
+        char ch;
+        for (int i = 0; i < s.length(); i++) {
+            ch = s.charAt(i);
+            if (ch == '[') {
+                queue.push(']');
+            } else if (ch == '{') {
+                queue.push('}');
+            } else if (ch =='(') {
+                queue.push(')');
+            } else if ( queue.isEmpty() || ch != queue.peek()) {
+                return false;
+            } else {
+                queue.pop();
+            }
+        }
+        return queue.isEmpty();
+    }
+}
+```
+
 
 
 # 21
@@ -248,18 +274,16 @@ class Solution {
         if(nums.length==0){
             return 0;
         }
-        int left = 1;
-        int right = 1;
-        while(right<nums.length){
-            if(nums[right]==nums[right-1]){
-                right++;
-            }else{
-                nums[left]=nums[right];
-                left++;
-                right++;
+        int slow = 0;
+        int fast = 0;
+        while(fast<nums.length){
+            if(nums[slow] != nums[fast]){
+                slow++;
+                nums[slow] = nums[fast];
             }
+            fast++;
         }
-        return left;
+        return slow+1;
     }
 }
 ```
@@ -279,6 +303,31 @@ class Solution {
             fast++;
         }
         return slow;
+    }
+}
+```
+
+
+
+# 28
+
+```java
+class Solution {
+    public int strStr(String haystack, String needle) {
+        int n = haystack.length();
+        int m = needle.length();
+        char[] h = haystack.toCharArray();
+        char[] e = needle.toCharArray();
+        for (int i = 0; i <= n - m; i++) {
+            int a = i, b = 0;
+            while (b < m && h[a] == e[b]) {
+                a++;
+                b++;
+            }
+            if (b == m)
+                return i;
+        }
+        return -1;
     }
 }
 ```
@@ -602,6 +651,30 @@ class Solution {
         }
 
         return ans == Integer.MAX_VALUE ? "" : s.substring(start, start + ans);
+    }
+}
+```
+
+# 77
+
+```java
+class Solution {
+    List<List<Integer>> res = new ArrayList<>();
+    List<Integer> path = new ArrayList<>();
+    public List<List<Integer>> combine(int n, int k) {
+        dfs(1,n,k);
+        return res;
+    }
+
+    public void dfs(int start, int n,int k){
+        if(k == path.size()){
+            res.add(new ArrayList<>(path));
+        }
+        for(int i =start;i<=n;i++){
+            path.add(i);
+            dfs(i+1,n,k);
+            path.remove(path.size()-1);
+        }
     }
 }
 ```
@@ -964,6 +1037,32 @@ class Solution {
         return min_depth+1;
     }
 }
+
+class Solution {
+    public int minDepth(TreeNode root) {
+        int min = 0;
+        if(root == null) return min;
+        Queue<TreeNode> queue = new LinkedList<>();
+        queue.add(root);
+        while(!queue.isEmpty()){
+            min++;
+            int size = queue.size();
+            for(int i = 0;i<size;i++){
+                TreeNode node = queue.poll();
+                if(node.left !=null){
+                    queue.add(node.left);
+                }
+                if(node.right !=null){
+                    queue.add(node.right);
+                }
+                if(node.right==null && node.left ==null){
+                    return min;
+                }
+            }
+        }
+        return min;
+    }
+}
 ```
 
 # 112
@@ -1025,6 +1124,34 @@ class Solution {
 
         path.remove(path.size()-1);
 
+    }
+}
+```
+
+# 116
+
+```java
+class Solution {
+    public Node connect(Node root) {
+        if (root == null)
+            return root;
+        Queue<Node> queue = new LinkedList<>();
+        queue.add(root);
+        while (!queue.isEmpty()) {
+
+            int size = queue.size();
+            for (int i = 0; i < size; i++) {
+                Node node = queue.poll();
+                if (i < size - 1) {
+                    node.next = queue.peek();
+                }
+                if (node.left != null)
+                    queue.add(node.left);
+                if (node.right != null)
+                    queue.add(node.right);
+            }
+        }
+        return root;
     }
 }
 ```
@@ -1126,6 +1253,32 @@ class Solution {
 }
 ```
 
+# 145
+
+```java
+class Solution {
+    public List<Integer> postorderTraversal(TreeNode root) {
+        List<Integer> ans = new ArrayList<>();
+        Deque<TreeNode> stack = new LinkedList<>();
+        TreeNode node = root;
+        while (node != null || !stack.isEmpty()) {
+            if (node != null) {
+                ans.add(0,node.val);
+                stack.push(node);
+                node = node.right;
+            } else {
+                node = stack.pop();
+                node = node.left;
+       
+            }
+        }
+        return ans;
+    }
+}
+```
+
+
+
 
 
 # 146
@@ -1180,6 +1333,33 @@ class Solution {
         }
 
         return ans;
+    }
+}
+```
+
+# 150
+
+```java
+class Solution {
+    public int evalRPN(String[] tokens) {
+        Deque<Integer> queue = new LinkedList<>();
+        for (int i = 0; i < tokens.length; i++) {
+            String s = tokens[i];
+            if (s.equals("+")) {
+                queue.push(queue.pop() + queue.pop());
+            } else if (s.equals("-")) {
+                queue.push(-queue.pop() + queue.pop());
+            } else if (s.equals("*")) {
+                queue.push(queue.pop() * queue.pop());
+            } else if (s.equals("/")) {
+                int temp1 = queue.pop();
+                int temp2 = queue.pop();
+                queue.push(temp2 / temp1);
+            } else {
+                queue.push(Integer.valueOf(s));
+            }
+        }
+        return queue.pop();
     }
 }
 ```
@@ -1455,6 +1635,38 @@ class Solution {
 }
 ```
 
+# 203
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode removeElements(ListNode head, int val) {
+        ListNode dummy = new ListNode(0);
+        dummy.next = head;
+        ListNode temp = dummy;
+        while(temp.next != null){
+            if(temp.next.val == val){
+                temp.next = temp.next.next;
+            }else{
+                temp = temp.next;
+            }
+        }
+        return dummy.next;
+    }
+}
+```
+
+
+
 # 206
 
 ```java
@@ -1534,6 +1746,34 @@ class Solution {
     }
 }
 ```
+
+# 226
+
+```java
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        if (root == null)
+            return null;
+        Queue<TreeNode> queue = new LinkedList<>();
+        queue.add(root);
+        while (!queue.isEmpty()) {
+            TreeNode node = queue.poll();
+            TreeNode temp = node.left;
+            node.left = node.right;
+            node.right = temp;
+            if (node.left != null) {
+                queue.add(node.left);
+            }
+            if (node.right != null) {
+                queue.add(node.right);
+            }
+        }
+        return root;
+    }
+}
+```
+
+
 
 # 230
 
@@ -1730,6 +1970,24 @@ class Solution {
 }
 ```
 
+# 343
+
+```java
+class Solution {
+    public int integerBreak(int n) {
+        int[] dp = new int[n+1];
+        for(int i=2;i<=n;i++){
+            int max=0;
+            for(int j=1;j<i;j++){
+                max= Math.max(max,Math.max(j*(i-j),j*dp[i-j]));
+            }
+            dp[i] = max;
+        }
+        return dp[n];
+    }
+}
+```
+
 
 
 # 344
@@ -1916,7 +2174,7 @@ class Solution {
             } else if ((long) mid * mid > num) {
                 right = mid - 1;
             } else {
-                left = left + 1;
+                left = mid + 1;
 
             }
         }
@@ -1954,6 +2212,80 @@ class Solution {
 }
 ```
 
+# 404
+
+```java
+class Solution {
+    public int sumOfLeftLeaves(TreeNode root) {
+        if(root == null) return 0;
+        int left = sumOfLeftLeaves(root.left);
+        int right = sumOfLeftLeaves(root.right);
+        int mid = 0;
+        if(root.left !=null && root.left.left==null &&root.left.right==null){
+            mid = root.left.val;
+        }
+        int sum = mid + left +right;
+        return sum;
+    }
+}
+```
+
+
+
+# 429
+
+```java
+/*
+// Definition for a Node.
+class Node {
+    public int val;
+    public List<Node> children;
+
+    public Node() {}
+
+    public Node(int _val) {
+        val = _val;
+    }
+
+    public Node(int _val, List<Node> _children) {
+        val = _val;
+        children = _children;
+    }
+};
+*/
+
+class Solution {
+    public List<List<Integer>> levelOrder(Node root) {
+        List<List<Integer>> res = new ArrayList<>();
+        if (root == null)
+            return res;
+        Queue<Node> queue = new LinkedList<>();
+        queue.add(root);
+
+        while (!queue.isEmpty()) {
+            int size = queue.size();
+            List<Integer> list = new ArrayList<>();
+            for (int i = 0; i < size; i++) {
+                Node node = queue.poll();
+
+                if (node.children != null) {
+
+                    for (int j = 0; j < node.children.size(); j++) {
+                        Node child = node.children.get(j);
+                        queue.add(child);
+
+                    }
+                }
+                list.add(node.val);
+            }
+            System.out.print(list);
+            res.add(list);
+        }
+        return res;
+    }
+}
+```
+
 
 
 # 442
@@ -1980,6 +2312,50 @@ var findDuplicates = function(nums) {
 };
 ```
 
+# 494
+
+```java
+class Solution {
+    int count = 0;
+    public int findTargetSumWays(int[] nums, int target) {
+        back(nums,target,0,0);
+        return count;
+    }
+
+    public void back(int[] nums, int target, int index,int sum){
+        if(index == nums.length){
+            if(sum == target){
+                count ++;
+            }
+        }else{
+            back(nums,target,index+1, sum+nums[index]);
+            back(nums,target,index+1, sum-nums[index]);
+        }
+    }
+}
+```
+
+
+
+# 509
+
+````java
+class Solution {
+    public int fib(int n) {
+        if(n<2) return n;
+        int p=0;
+        int q=0;
+        int r=1;
+        for(int i=1;i<n;i++){
+            p=q;
+            q=r;
+            r=p+q;
+        }
+        return r;
+    }
+}
+````
+
 
 
 # 513
@@ -2001,6 +2377,48 @@ class Solution {
             }
         }
         return node.val;
+    }
+}
+```
+
+# 515
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ * int val;
+ * TreeNode left;
+ * TreeNode right;
+ * TreeNode() {}
+ * TreeNode(int val) { this.val = val; }
+ * TreeNode(int val, TreeNode left, TreeNode right) {
+ * this.val = val;
+ * this.left = left;
+ * this.right = right;
+ * }
+ * }
+ */
+class Solution {
+    public List<Integer> largestValues(TreeNode root) {
+        List<Integer> res = new ArrayList<>();
+        if(root == null) return res;
+        Queue<TreeNode> queue = new LinkedList<>();
+        queue.add(root);
+        while (!queue.isEmpty()) {
+            int size = queue.size();
+            List<Integer> list = new ArrayList<>();
+            for (int i = 0; i < size; i++) {
+                TreeNode node = queue.poll();
+                if (node.left != null)
+                    queue.add(node.left);
+                if (node.right != null)
+                    queue.add(node.right);
+                list.add(node.val);
+            }
+            res.add(Collections.max(list));
+        }
+        return res;
     }
 }
 ```
@@ -2585,6 +3003,32 @@ class Solution {
     }
 }
 ```
+
+# 1047
+
+```java
+class Solution {
+    public String removeDuplicates(String s) {
+        Deque<Character> queue = new LinkedList<>();
+        char ch;
+        for (int i = 0; i < s.length(); i++) {
+            ch = s.charAt(i);
+            if (queue.isEmpty() || queue.peek() != ch) {
+                queue.push(ch);
+            } else {
+                queue.pop();
+            }
+        }
+        String ans = "";
+        while (!queue.isEmpty()) {
+            ans = queue.pop() + ans;
+        }
+        return ans;
+    }
+}
+```
+
+
 
 ##### 
 
