--- a/力扣.md
+++ b/力扣.md
@@ -13,6 +13,7 @@ class Solution {
         return new int[0];
     }
 }
+pShs1JAofgwM@fakemailserver.com
 ```
 
 # 3
@@ -108,6 +109,31 @@ class Solution {
 }
 ```
 
+# 14
+
+```java
+class Solution {
+    public String longestCommonPrefix(String[] strs) {
+        if(strs == null || strs.length == 0){
+            return "";
+        }
+        int length = strs[0].length();
+        int nums = strs.length;
+        for(int i = 0;i<length;i++){
+            char c = strs[0].charAt(i);
+            for(int j = 1;j<nums;j++){
+                if(i== strs[j].length() || c!=strs[j].charAt(i)){
+                    return strs[0].substring(0,i);
+                }
+            }
+        }
+        return strs[0];
+    }
+}
+```
+
+
+
 # 15
 
 ```java
@@ -154,33 +180,32 @@ class Solution {
 /**
  * Definition for singly-linked list.
  * public class ListNode {
- * int val;
- * ListNode next;
- * ListNode() {}
- * ListNode(int val) { this.val = val; }
- * ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
  * }
  */
 class Solution {
     public ListNode removeNthFromEnd(ListNode head, int n) {
-        ListNode dummy = new ListNode(-1);
-        dummy.next = head;
-        ListNode last = findNode(dummy, n + 1);
-        last.next = last.next.next;
-        return dummy.next;
-    }
-
-    public ListNode findNode(ListNode head, int n) {
-        ListNode p1 = head;
-        for (int i = 0; i < n; i++) {
-            p1 = p1.next;
+        if(head == null) return null;
+        int all;
+        ListNode dummy = head;
+        for(all =1;dummy.next !=null; all++){
+            dummy =dummy.next;
         }
-        ListNode p2 = head;
-        while (p1 != null) {
-            p1 = p1.next;
-            p2 = p2.next;
+        ListNode temp = new ListNode(-1);
+        temp.next = head;
+        ListNode newTail = temp;
+        for(int i =0;i<all-n;i++){
+            newTail =newTail.next;
         }
-        return p2;
+        if(newTail == null){
+            return null;
+        }
+        newTail.next = newTail.next.next;
+        return temp.next;
     }
 }
 ```
@@ -1704,22 +1729,18 @@ class Solution {
         int right = 0;
         int min = Integer.MAX_VALUE;
         int sum = 0;
-        int length = nums.length;
-        if(length == 0){
-            return 0;
-        }
-        while(right<length){
-            sum = sum+nums[right];
-            right++;
+
+        while(right<nums.length){
+            sum +=nums[right];
             while(sum>=target){
-                min = Math.min(min,right-left);
-                sum = sum-nums[left];
+                min = Math.min(min,right-left+1);
+                sum -= nums[left];
                 left++;
-             
             }
-            
+            right++;
         }
-        return min == Integer.MAX_VALUE ? 0 : min;
+        return min == Integer.MAX_VALUE ? 0:min;
+
     }
 }
 ```
@@ -2335,6 +2356,26 @@ class Solution {
 }
 ```
 
+# 485
+
+```java
+class Solution {
+    public int findMaxConsecutiveOnes(int[] nums) {
+        int count = 0;
+        int max = 0;
+        for(int i =0;i<nums.length;i++){
+            if(nums[i]==1){
+                count++;
+            }else{
+                max = Math.max(max,count);
+                count =0;
+            }
+        }
+        return Math.max(max,count);
+    }
+}
+```
+
 
 
 # 509
@@ -2660,6 +2701,30 @@ class Solution {
 }
 ```
 
+# 724
+
+```java
+class Solution {
+    public int pivotIndex(int[] nums) {
+        int sum = 0;
+        int leftSum = 0;
+        for(int num : nums){
+            sum = sum+num;
+        }
+        for(int i = 0;i<nums.length;i++){
+            int right = sum - nums[i] - leftSum;
+            if(right == leftSum){
+                return i;
+            }
+            leftSum += nums[i];
+
+
+        }
+        return -1;
+    }
+}
+```
+
 
 
 # 733
@@ -2730,6 +2795,29 @@ class Solution {
             return false;
         }
         return true;
+    }
+}
+```
+
+# 747
+
+```java
+class Solution {
+    public int dominantIndex(int[] nums) {
+        int max= nums[0];
+        int maxIndex = 0;
+        for(int i = 0;i<nums.length;i++){
+            if(nums[i] >max){
+                max = nums[i];
+                maxIndex=i;
+            }
+        }
+        for(int i = 0;i<nums.length;i++){
+            if(i != maxIndex && nums[i]*2 > max){
+                return -1;
+            }
+        }
+        return maxIndex;
     }
 }
 ```
